--- a/.github/workflows/fetch-ips.yml
+++ b/.github/workflows/fetch-ips.yml
@@ -29,27 +29,17 @@ jobs:
         env:
           SEFIN_API_KEY: ${{ secrets.SEFIN_API_KEY }}
 
-      - name: Run git pull
-        run: git pull origin main
+      - name: Check for changes
+        id: check_changes
+        run: |
+          git status -s > changes.txt
+          echo "has_changes=$(cat changes.txt | wc -l)" >> $GITHUB_ENV
 
-      - name: Add files to staging
-        run: git add .
-
-      - name: Commit and push changes
+      - name: Commit and push changes if necessary
+        if: env.has_changes != '0'
         run: |
           git config user.name "Sefinek Actions"
           git config user.email "sefinek.actions@gmail.com"
-          if [ -n "$(git status -s)" ]; then
-            MODIFIED_FILES=$(git diff --name-only HEAD | grep -v '^cache/')
-            FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
-            if [ "$FILE_COUNT" -gt 0 ]; then
-              git commit -am "Bi-hourly update of blocklists [$FILE_COUNT files] - $(date -u '+%Y-%m-%d %H:%M:%S UTC')" -m "$MODIFIED_FILES"
-              git push origin main
-            else
-              echo "Canceled. No files to commit after excluding cache/ files."
-            fi
-          else
-            echo "Canceled. No changes to commit."
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.SEFINEK_ACTIONS_PAT }}
+          git add .
+          git commit -am "Update the list of malicious IP addresses"
+          git push origin main
