--- a/.github/workflows/fetch-ips.yml
+++ b/.github/workflows/fetch-ips.yml
@@ -2,7 +2,7 @@ name: Fetch IPs
 
 on:
   schedule:
-    - cron: '0 */2 * * *' # Co 2 godziny
+    - cron: '0 */2 * * *' # At minute 0 past every 2nd hour.
   workflow_dispatch:
 
 jobs:
@@ -29,17 +29,15 @@ jobs:
         env:
           SEFIN_API_KEY: ${{ secrets.SEFIN_API_KEY }}
 
-      - name: Check for changes
-        id: check_changes
-        run: |
-          git status -s > changes.txt
-          echo "has_changes=$(cat changes.txt | wc -l)" >> $GITHUB_ENV
-
-      - name: Commit and push changes if necessary
-        if: env.has_changes != '0'
+      - name: Commit and push changes
         run: |
           git config user.name "Sefinek Actions"
           git config user.email "sefinek.actions@gmail.com"
-          git add .
-          git commit -am "Update the list of malicious IP addresses"
-          git push origin main
+          MODIFIED_FILES=$(git diff --name-only HEAD)
+          FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
+          if [ "$FILE_COUNT" -gt 0 ]; then
+            git commit -am "Update the list of malicious IP addresses [$FILE_COUNT files]" -m "$MODIFIED_FILES"
+            git push origin main
+          else
+            echo "Canceled. No files were modified."
+          fi
