--- a/.github/workflows/fetch-ips.yml
+++ b/.github/workflows/fetch-ips.yml
@@ -33,12 +33,14 @@ jobs:
         run: |
           git config user.name "Sefinek Actions"
           git config user.email "sefinek.actions@gmail.com"
-          MODIFIED_FILES=$(git diff --name-only HEAD)
-          FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
-          if [ "$FILE_COUNT" -gt 0 ]; then
-            git commit -am "Update the list of malicious IP addresses [$FILE_COUNT files]" -m "$MODIFIED_FILES"
-            git push origin main
-          else
+
+          if git diff --quiet; then
             echo "Canceled. No files were modified."
             exit 0
           fi
+
+          MODIFIED_FILES=$(git diff --name-only HEAD)
+          FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
+
+          git commit -am "Update the list of malicious IP addresses [$FILE_COUNT files]" -m "$MODIFIED_FILES"
+          git push origin main
