--- a/.github/workflows/whitelist.yml
+++ b/.github/workflows/whitelist.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm ci --omit=dev
 
-      - name: Process the Google whitelist
-        run: node scripts/google.js
+      - name: Process the Googlebot whitelist
+        run: node scripts/googlebot.js
+
+      - name: Process the Bingbot whitelist
+        run: node scripts/bingbot.js
 
       - name: Process the Cloudflare whitelist
         run: node scripts/cloudflare.js
