--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "up": "ncu -u && npm install && npm update && npm audit fix"
+    "up": "ncu -u && npm install && npm update && npm audit fix",
+    "remove": "node utils/removeByCriteria.js"
   },
   "dependencies": {
     "axios": "^1.7.7"
