--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "malicious-ip-addresses",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This repository contains a list of various IP addresses associated with different malicious activities on the network.\r Most of them are part of botnets used to carry out cyberattacks, such as DDoS (Distributed Denial of Service) attacks.",
   "homepage": "https://github.com/sefinek/Malicious-IP-Addresses#readme",
   "bugs": {
@@ -19,10 +19,11 @@
     "remove": "node utils/removeByCriteria.js"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "csv-parse": "^5.5.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "globals": "^15.11.0"
+    "@eslint/js": "^9.15.0",
+    "globals": "^15.12.0"
   }
 }
