--- a/.github/workflows/fetch-ips.yml
+++ b/.github/workflows/fetch-ips.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
           cache: 'npm'
 
       - name: Install dependencies
@@ -28,6 +28,9 @@ jobs:
         run: node index.js
         env:
           SEFIN_API_KEY: ${{ secrets.SEFIN_API_KEY }}
+
+      - name: Run git pull
+        run: git pull
 
       - name: Add files to staging
         run: git add .
