--- a/.github/workflows/whitelist.yml
+++ b/.github/workflows/whitelist.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
           cache: 'npm'
 
       - name: Install dependencies
@@ -32,6 +32,9 @@ jobs:
 
       - name: Process the Cloudflare whitelist
         run: node scripts/cloudflare.js
+
+      - name: Run git pull
+        run: git pull
 
       - name: Add files to staging
         run: git add .
