--- a/.github/workflows/fetch-ips.yml
+++ b/.github/workflows/fetch-ips.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci --omit=dev
 
       - name: Fetch IPs from API and update files
-        run: node index.js
+        run: node .
         env:
           MALICIOUS_IPS_LIST_SECRET: ${{ secrets.MALICIOUS_IPS_LIST_SECRET }}
 
